@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,6 @@ import java.security.PrivilegedAction;
  * @bug 8267108
  * @summary confirm current installed subject specification
  * @run main/othervm -Djava.security.manager=allow FromACC
- * @run main/othervm -Djava.security.manager=disallow FromACC
  */
 public class FromACC {
     public static void main(String[] args) throws Exception {
